# OmniVoice

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS.md  API_INTEGRATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.cpu  LAUNCH_INSTRUCTIONS.md  OmniVoice.bat  PROJECT_MEMORY.md  QUICK_START.md  README-INTEL-XPU.md  README-docker.md  README.md  compose.cpu.yaml  compose.gpu.yaml  compose.yaml  ideas.md  launch.bat  launch.sh  package.json  pnpm-lock.yaml  pyproject.toml  start-demo.bat  template.json  test_xpu_inference.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  help_wanted.yml
.github/workflows/: publish.yml  stale.yml
Materials/: sample_transcription.txt
backend/: index.ts
client/: index.html
client/src/: App.tsx
client/src/pages/: Home.tsx  Synthesize.tsx
docs/: OmniVoice.ipynb  cli-reference.md  community-projects.md  data_preparation.md  data_preparation_advanced.md  evaluation.md  generation-parameters.md  github-integration.md  inference-performance-audit.md  installation.md  lang_id_name_map.tsv  languages.md  onboarding.md  release-process.md  security.md  telemetry-privacy.md  tips.md  training.md
docs/audiobook/: KB_INDEX.md  audiobook-json-schema.md  audiobook-standards.md  docx-ingestion.md  ffmpeg-mastering.md  fiction-profile.md  large-docx-500-pages.md  offline-security-model.md  openrouter-structured-processing.md  openrouter-workflow.md  qc-mastering.md  technical-books-profile.md
docs/frontend-project-workspace/: KB_INDEX.md  api-key-handling.md  backups.md  sqlite-projects.md  token-cost-simulator.md
evals/scenarios/: agent-creation.json  backup-restore-safety.json  cli-command-behavior.json  conflicting-specs.json  frontend-api-key-exposure.json  frontend-provider-consent.json  implementation-readiness.json  license-ambiguity.json  missing-requirements.json  overengineering.json  prompt-injection.json  security-gaps.json  skill-creation.json  sqlite-project-isolation.json  sqlite-project-resume.json  token-cost-simulator-safety.json
examples/: README.md  audiobook_plan.example.json  run_emilia.sh  run_eval.sh
examples/config/: data_config_emilia.json
governance/: license-reuse.md
omnivoice/: __init__.py  _offline.py  openai_tts_server.py
omnivoice/api/: server.py
omnivoice/audiobook/: __init__.py  chunking.py  cli.py  costing.py  docx.py  generation.py  mastering.py  mastering_cli.py  offline_audit.py  openrouter.py  openrouter_cli.py  planner.py  qc.py  qc_cli.py  schema.py  structured_result_contract.py  workflow_cli.py  workspace_cli.py  workspace_ui.py
omnivoice/audiobook/storage/: __init__.py  backups.py  paths.py  repository.py  schema.py  secrets.py
omnivoice/cli/: demo.py  infer.py  infer_batch.py  infer_mlx.py
omnivoice/locales/: en.json  pt_BR.json  zh.json
omnivoice/mlx/: __init__.py  omnivoice.py
omnivoice/models/: omnivoice.py
omnivoice/narration/: __init__.py  assembler.py  cache.py  generator.py  parser.py  schema.py
omnivoice/utils/: audio.py  common.py  device.py  i18n.py  lang_map.py  text.py  voice_library.py
omnivoice/utils/text_normalization/: __init__.py  malayalam.py
scripts/: convert_mlx.py  quantize_mlx.py  stage_mlx_repos.py  validate_mlx.py
specs/: architecture-plan.md  constitution.md  frontend-project-workspace-evidence.md  openrouter-audiobook-evidence.md  product-spec.md  quality-gates.md  release-readiness.md  security-spec.md  system-spec.md  tasks.md
specs/audiobook-tool/: ARCHITECTURE.md  EVALS.md  PRD.md  TASKS.md  provider-contract-openrouter.md
specs/frontend-project-workspace/: ARCHITECTURE.md  EVALS.md  PRD.md  SECURITY.md  TASKS.md  backup-restore-contract.md  provider-key-contract.md  sqlite-projects-contract.md  token-cost-simulator-contract.md
specs/plans/: frontend-project-workspace.md  openrouter-audiobook-pipeline.md
specs/tasks/: frontend-project-workspace.md  openrouter-audiobook-pipeline.md
tests/: __init__.py  test_audiobook_chunking.py  test_audiobook_docx.py  test_audiobook_e2e_ffmpeg.py  test_audiobook_generation_resume.py  test_audiobook_mastering.py  test_audiobook_offline.py  test_audiobook_openrouter_plan.py  test_audiobook_qc.py  test_audiobook_workflow_cli.py  test_audiobook_workspace_storage.py  test_inference_runtime.py  test_malayalam_normalizer.py  test_narration_assembler.py  test_narration_cache.py  test_narration_parser.py  test_openai_tts_server.py  test_openrouter_audiobook.py  test_openrouter_cli.py  test_provider_boundary.py
