[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnivoice"
version = "0.1.2"
description = "OmniVoice: Towards Omnilingual Zero-Shot Text-to-Speech with Diffusion Language Models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Han Zhu"}]
keywords = [
    "tts",
    "text-to-speech",
    "speech-synthesis",
    "zero-shot",
    "multilingual",
    "diffusion",
    "voice-cloning",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",

    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    # torch/torchaudio intentionally unpinned — install manually for your
    # backend (CUDA, XPU, MPS). See README-INTEL-XPU.md.
    "torch>=2.8",
    "torchaudio>=2.8",
    "transformers==5.3.0",
    "accelerate",
    "pydub",
    "gradio",
    "tensorboardX",
    "webdataset",
    "numpy",
    "soundfile"
]

[project.optional-dependencies]

eval = [
    "jiwer==3.1.0",       # WER
    "librosa",             # Audio processing
    "s3prl",               # Speech representation (HuBERT etc.)
    "funasr",              # ASR models
    "zhconv",              # Chinese character normalization
    "zhon",                # Chinese punctuation
    "unidecode",            # Unicode normalization
]

[project.scripts]
omnivoice-infer = "omnivoice.cli.infer:main"
omnivoice-infer-batch = "omnivoice.cli.infer_batch:main"
omnivoice-demo = "omnivoice.cli.demo:main"

[project.urls]
Homepage = "https://github.com/k2-fsa/OmniVoice"
Repository = "https://github.com/k2-fsa/OmniVoice"
"Bug Tracker" = "https://github.com/k2-fsa/OmniVoice/issues"

[tool.uv.sources]
# Intel XPU fork: PyTorch is installed manually (see README-INTEL-XPU.md).
# We intentionally do NOT pin to the CUDA index here so that users on Intel
# Arc / Apple Silicon / CPU are not forced to download CUDA wheels.
#
# Upstream CUDA install (for reference):
#   pip install torch==2.8.* torchaudio==2.8.* --index-url https://download.pytorch.org/whl/cu128
# Intel XPU install:
#   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/xpu

[tool.hatch.build.targets.sdist]
include = ["omnivoice"]

[tool.hatch.build.targets.wheel]
packages = ["omnivoice"]
