[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnivoice"
version = "0.2.0"
description = "OmniVoice: Towards Omnilingual Zero-Shot Text-to-Speech with Diffusion Language Models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Han Zhu"}]
keywords =[
    "tts",
    "text-to-speech",
    "speech-synthesis",
    "zero-shot",
    "multilingual",
    "diffusion",
    "voice-cloning",
]
classifiers =[
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies =[
    "torch>=2.4",
    "torchaudio>=2.4",
    "transformers>=5.3.0",
    "accelerate",
    "pydub",
    "gradio",
    "tensorboardX",
    "webdataset",
    "numpy",
    "soundfile",
    "librosa",
][project.optional-dependencies]
eval =[
    "jiwer==3.1.0",           # WER
    "s3prl",                  # Speech representation (HuBERT etc.)
    "funasr",                 # ASR models
    "zhconv",                 # Chinese character normalization
    "zhon",                   # Chinese punctuation
    "unidecode",              # Unicode normalization
]
# ====================================================================
# NEW: Optional GPU build dependencies
# Allows users to install with: `uv pip install -e .[cu126]`
# ====================================================================
cu126 =[
    "torch==2.6.0+cu126",
    "torchaudio==2.6.0+cu126",
]
cu128 =[
    "torch==2.8.0+cu128",
    "torchaudio==2.8.0+cu128",
]

[project.scripts]
omnivoice-infer = "omnivoice.cli.infer:main"
omnivoice-infer-batch = "omnivoice.cli.infer_batch:main"
omnivoice-demo = "omnivoice.cli.demo:main"

[project.urls]
Homepage = "https://github.com/k2-fsa/OmniVoice"
Repository = "https://github.com/k2-fsa/OmniVoice"
"Bug Tracker" = "https://github.com/k2-fsa/OmniVoice/issues"

[tool.uv.sources]
# Dynamically route Torch to the correct index URL based on the chosen extra.
torch =[
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }, # Default fallback
]
torchaudio =[
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }, # Default fallback
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv]
# Tells UV not to freak out during lock resolution, explicitly declaring these cannot be installed simultaneously
conflicts = [[
    { extra = "cu126" },
    { extra = "cu128" },
  ],
]

[tool.ruff.lint]
ignore = ["F401", "E402", "F403", "F841", "E741"]

[tool.hatch.build.targets.sdist]
include = ["omnivoice"]

[tool.hatch.build.targets.wheel]
packages = ["omnivoice"]
